tests/snapshots/messages__type21_aton_buoy.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,E0000ChcFstP000000000000000?iM91:RGuH00003RP10,4*3F\")"
---
AidToNavigationReport(
    AidToNavigationReport {
        message_type: 21,
        repeat_indicator: 0,
        mmsi: 79,
        aid_type: ReferencePoint,
        name: V-79,
        position_accuracy: UnaugmentedGnss,
        longitude: Some(
            -6.354665,
        ),
        latitude: Some(
            36.829834,
        ),
        to_bow: None,
        to_stern: None,
        to_port: None,
        to_starboard: None,
        epfd: Surveyed,
        second: 5,
        off_position: false,
        regional: 0,
        raim: false,
        virtual_aid: true,
        assigned: false,
        name_extension: None,
    },
)
