tests/snapshots/messages__type22_addressed_mmsi.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,F1mg=5B2N2P?FtlF81b4N?@B0000,0*04\")"
---
ChannelManagement(
    ChannelManagement {
        message_type: 22,
        repeat_indicator: 0,
        mmsi: 123456789,
        channel_a: 2087,
        channel_b: 2088,
        txrx: 0,
        power: true,
        target: Addressed {
            dest1: 987654321,
            dest2: 111222333,
        },
        band_a: false,
        band_b: false,
        zonesize: 4,
    },
)
