tests/snapshots/messages__type24_part_a_160bit.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,B,H0HN<8QLTdTpN22222222222223,2*1B\")"
---
ClassBStaticData(
    PartA(
        ClassBStaticDataPartA {
            message_type: 24,
            repeat_indicator: 0,
            mmsi: 25660450,
            shipname: WIKING,
        },
    ),
)
